[build-system]
requires = [
  "setuptools>=45",
  "setuptools_scm[toml]>=6.2",
  "wheel"
]

[project]
name = "topofileformats"
dynamic = ["version"]
authors = [
  { name = "Sylvia Whittle", email = "sylvia.whittle@sheffield.ac.uk" },
  { name = "Neil Shephard", email = "n.shephard@sheffield.ac.uk" },
  { name = "TopoStats Team", email = "topostats@sheffield.ac.uk" }
]
description = "Read and retrieve data from various AFM file formats."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

keywords = [
  "afm",
  "image processing"
]

dependencies = [
  "AFMReader",
]

[project.urls]
"Homepage" = "https://github.com/AFM-SPM/topofileformats"
"Bug Tracker" = "https://github.com/AFM-SPM/topofileformats/issues"
